# docs/v2/public-openapi.yaml
@@ -165,27 +165,16 @@ components:
         id:
           type: string
           example: avz-2b66bb79
-          readOnly: false
+          readOnly: true
         code:
           type: string
           example: MAN1
-          readOnly: false
         name:
           type: string
           example: 'Manchester Region 1'
-          readOnly: false
         datacentre_site_id:
           type: integer
           example: 999
-          readOnly: false
-        created_at:
-          type: string
-          example: '2020-07-07T10:30:00+01:00'
-          readOnly: false
-        updated_at:
-          type: string
-          example: '2020-07-07T10:30:00+01:00'
-          readOnly: false
       description: 'Availability Zones'
       required: {  }
 paths:
